# SJTU_CP2024

./: Fibonacci.cpp  README.md  test.cpp
3.11/: CMakeLists.txt  Ising_model.cpp  Test_IsingSpin.cpp
3.11/Example_catch2/: CMakeLists.txt  UnitTests.cpp  main.cpp
3.4/: Ising model 3.4.cpp  Ising model 3.4.dev  Ising model 3.4.layout  IsingSystem.hpp  Ising_model_3.4_private.h  Ising_model_3.4_private.rc  Makefile.win
3.9/: Ising model.dev  Ising model.layout  IsingSystem.hpp  Ising_model_private.h  Ising_model_private.rc  Makefile.win
4.1/: CMakeLists.txt  IsingSpin.cpp  IsingSpin.hpp  IsingSpinOnLattice.cpp  IsingSpinOnLattice.hpp  IsingSystem.cpp  IsingSystem.hpp  IsingSystem_Honey.cpp  IsingSystem_Honey.hpp  IsingSystem_Square.cpp  IsingSystem_Square.hpp  Ising_model.cpp  Test_IsingSpin.cpp  matplotlibcpp.h  matplotlibtest.cpp
